--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
 
     // spring security
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
